2004-06-14 Mikhail Khodjaiants
	Added transparency to the icons.
	* icons/full/cview16/sharedlibraries_view.gif
	* icons/full/eview16/sharedlibraries_view.gif

2004-06-12 Mikhail Khodjaiants
	Added the superclass for action delegates of views different than the Debug view and 
	driven by the selection in the Debug view.
	All "Auto-refresh" actions implement "Observer" to be notified of changes 
	by the corresponding update managers.
	* ActionMessages.properties
	* AbstractAutoRefreshActionDelegate.java
	* AbstractRefreshActionDelegate.java
	* AbstractViewActionDelegate.java: new
	* LoadSymbolsForAllActionDelegate.java
	* RefreshRegistersAction.java
	* RefreshSharedLibrariesAction.java

2004-06-11 Mikhail Khodjaiants
	New implementation of the "Load Symbols For All" action of the Shared Libraries view.
	Fixes for the "Auto-Refresh" and "refresh" actions.
	* AbstractAutoRefreshActionDelegate.java
	* AbstractRefreshActionDelegate.java
	* LoadSymbolsForAllAction.java: removed
	* LoadSymbolsForAllActionDelegate.java: new
	* SharedLibrariesView.java
	* plugin.properties
	* plugin.xml	
	
2004-06-11 Mikhail Khodjaiants
	New implementation of the "Auto-Refresh" actions for registers and shared libraries.
	* plugin.properties
	* plugin.xml	
	* AbstractAutoRefreshActionDelegate.java: new
	* AutoRefreshRegistersAction.java: new
	* AutoRefreshSharedLibrariesAction.java: new
	* AutoRefreshAction.java: removed
	* AbstractRefreshActionDelegate.java

2004-06-09 Mikhail Khodjaiants
	New implementation of the "Refresh" actions for registers and shared libraries.
	* icons/full/clcl16/auto_refresh_co.gif: new
	* icons/full/clcl16/refresh_co.gif: new
	* plugin.properties
	* plugin.xml	
	* CDebugImages.java
	* AbstractRefreshActionDelegate.java: new
	* RefreshRegistersAction.java: new
	* RefreshSharedLibrariesAction.java: new
	* SharedLibrariesView.java
	* Refreshaction.java: removed

2004-06-08 Mikhail Khodjaiants
	Warning clean-up.
	* DebugTextHover.java

2004-06-03 Mikhail Khodjaiants