@@ -31,9 +31,8 @@ ShowDebuggerConsoleAction.tooltip=Show Debugger Console On Target Selection
 AddBreakpoint.label=Toggle &Breakpoint
 EnableBreakpoint.label=&Toggle Breakpoint Enabled
 BreakpointProperties.label=Breakpoint P&roperties...
-GlobalManageBreakpointAction.label=Add/Remove Brea&kpoint (C/C++)
-ManageFunctionBreakpointAction.label=Add/Remove Breakpoint
-ManageFunctionBreakpointAction.tooltip=Add/Remove Function Breakpoint
+ManageFunctionBreakpointAction.label=Toggle Breakpoint
+ManageFunctionBreakpointAction.tooltip=Toggle Function/Method Breakpoint
 BreakpointPropertiesAction.label=P&roperties...
 GlobalManageWatchpointAction.label=Add &Watchpoint (C/C++)...
 AddExpressionAction.label=Add &Expression...
