@@ -41,3 +41,5 @@ ResumeAtLineActionDelegate.Operation_is_not_supported_1=Operation is not support
 AddGlobalsActionDelegate.Error(s)_occured_adding_globals_1=Error(s) occured adding globals.
 AbstractRefreshActionDelegate.Error_1=Error
 AbstractRefreshActionDelegate.Error(s)_occurred_refreshing_the_view_1=Error(s) occurred refreshing the view.
+ManageFunctionBreakpointActionDelegate.Error_1=Error
+ManageFunctionBreakpointActionDelegate.Operation_failed_1=Operation failed.
